--- a/copilot/example-app/Dockerfile
+++ b/copilot/example-app/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:16-alpine
 
 WORKDIR /app
-RUN npm install express
+RUN npm install express @aws-sdk/client-sns
 COPY ./copilot/example-app/src/ /app/src/
 EXPOSE 8080
 CMD ["node", "./src/server.js"]
