--- a/copilot/example-app/manifest.yml
+++ b/copilot/example-app/manifest.yml
@@ -31,7 +31,7 @@ exec: true     # Enable running commands in your container.
 
 publish:
   topics:
-    - name: sample-topic
+    - name: sampleTopic
 
 #
 #variables:                    # Pass environment variables as key value pairs.
