--- a/copilot/receive-message-batch/Dockerfile
+++ b/copilot/receive-message-batch/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:16-alpine
 
 WORKDIR /app
-RUN npm install express
+RUN npm install express @aws-sdk/client-sqs
 COPY ./copilot/receive-message-batch/src/ /app/src/
 EXPOSE 8080
 CMD ["node", "./src/server.js"]
